# motor_ws

./: .gitignore  readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motor_control_interfaces/share/motor_control_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_control_interfaces/share/motor_control_interfaces/action/: AngleControl.action  AngleControl.idl
install/motor_control_interfaces/share/motor_control_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motor_control_interfaces__rosidl_generator_cExport.cmake  export_motor_control_interfaces__rosidl_generator_cppExport.cmake  export_motor_control_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  motor_control_interfacesConfig-version.cmake  motor_control_interfacesConfig.cmake  (+4 more)
install/ros2_motor_control/lib/ros2_motor_control/: angle_increment_action_server  motor_control_node
install/ros2_motor_control/share/ros2_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/motor_control_interfaces/: CMakeLists.txt
src/ros2_motor_control/: package.xml  setup.cfg  setup.py
src/ros2_motor_control/launch/: motor_control.launch.py
src/ros2_motor_control/ros2_motor_control/: angle_increment_action_server.py  motor_control.py
(+38 files in other folders)
