<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_motor_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kimminuk0320@gmail.com">junhyuk</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <build_depend>motor_control_interfaces</build_depend>
  <exec_depend>motor_control_interfaces</exec_depend>

</package>
